JUDDI-794 fixed for businesses JUDDI-651 updating a number of selenium tests, bug in the hubs when handling error messages
git-svn-id: https://svn.apache.org/repos/asf/juddi/trunk@1559461 13f79535-47bb-0310-9956-ffa450edef68